fixed nav links on mobile, styled feature link on mobile

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -202,7 +202,7 @@ nav {
 		font-size: 12px;
 		text-align: right;
 		padding: 0 13px;
-		margin-bottom: 10px;
+		margin-bottom: 2px;
 		line-height: 28px;
 		color: darken($blue, 10%);
 	}
@@ -513,6 +513,16 @@ footer {
 				margin: 0;
 			}
 		}
+	}
+	.owner-link {
+		text-align: left;
+		margin: 0;
+		height: 48px;
+		color: white;
+		display: inline-block;
+		width: 100%;
+		line-height: 47px;
+		padding: 0 16px;
 	}
 }
 .content {
